--- a/SPRINT 3/views/productos/detalle.ejs
+++ b/SPRINT 3/views/productos/detalle.ejs
@@ -11,6 +11,18 @@
         <h1>Productos</h1>
         <%- include('./partials/listado') %>
 
+        <h2>Buscar producto</h2>
+        <form action="/productos/buscar" method="GET">
+            <input type="text" name="search" placeholder="Buscar producto...">
+            <button type="submit">Buscar</button>
+        </form>
+        <ul>
+            <% for (let i = 0; i <listasProductos.length; i++) { %>
+            <li><%= searchTerm[i].title %></li>
+        <% } %>
+        </ul>
+        
+
         <h2>Listado de productos</h2>
         <ul>
             <% for (let i = 0; i <listasProductos.length; i++) { %>
