--- a/SPRINT 3/views/usuario/registro.ejs
+++ b/SPRINT 3/views/usuario/registro.ejs
@@ -13,6 +13,10 @@
          <br>
         <input class="input" type=”email” name=”email” id="nombre">
          <br>
+         vallue="<%= locals.old && old.email %">
+         <% if (locals.errors && errors.name) { %>
+              <p class="feedback"> <%= errors.name %> </p>}
+         <% } %>
         <label for=”contraseña”> Contraseña </label>
          <br>
         <input class="input" type=”password” name=”password” id="contraseña">
