--- a/SPRINT 7/src/views/users/create.ejs
+++ b/SPRINT 7/src/views/users/create.ejs
@@ -24,7 +24,8 @@
             <label for="pwd"> Contraseña </label>
                 <br>
             <input type="password" id="pwd" name="pwd">
-            
+                <br>
+            <input type="image" id="image" alt="Login" src=""/>
         </form>
 
         <!--FOOTER-->
