--- a/SPRINT 7/src/views/partials/menu.ejs
+++ b/SPRINT 7/src/views/partials/menu.ejs
@@ -3,6 +3,7 @@
     <ul>
       <li> <a href="/home"> <img src="/assets/imágenes/ícono.png" alt="ícono"> </a> </li>
       <li> <a href="/products"> PRODUCTOS </a> </li>
+      <li> <a href="/admin"> ADMINISTRAR </a> </li>
       <li> <a href="#"> COMISIONES </a> </li>
       <li> <a href="#"> CONTACTO </a> </li>
       <li> <a href="/users"> <img src="/assets/imágenes/usuario.png" alt="usuario"> </a> </li>
